--- a/DivisiblePrimoMenor10.html
+++ b/DivisiblePrimoMenor10.html
@@ -6,7 +6,8 @@
 		
 	</head>
 	<body>
-	Introduce un numero <input type ="text" id ="txtn"/><input type ="button" value ="aceptar" onclick="divisible();"/>
+	Introduce un numero <input type ="text" id ="txtn"/> <br>
+	<input type ="button" value ="Muestra" onclick="divisible();"/>
 		<div id = "div1"></div>
 		<script>
 		function divisible(){
