--- a/FactoresPrimos.html
+++ b/FactoresPrimos.html
@@ -2,37 +2,29 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Primo </title>
+		<title>Descomposicion en Factores Primos </title>
 		
 	</head>
 	<body>
 	<label for="numero">Introduzca un numero</label><input type ="text" id="numero"/>
 	<br>
-	<input type="button" value="Evaluar" onclick="comprobar();"/>
+	<input type="button" value="Evaluar" onclick="descomponer();"/>
 	<div id="txtComp"></div>
 	<script>
 	
 		//El usuario introduce un numero
-		// Ver si es primo o no
-		function comprobar(){
+		// Descomponerlo en factores primos
+		function descomponer(){
 		var n = parseInt(document.getElementById("numero").value);
 		var cont = 0;
 		var texto ="";
-		for(var i =1;i<=n;i++){
-			if(n%i==0){
-		cont++;
-			}
-			
-		if(cont>2){
-		texto ="El numero "+n+" no es primo";
+		var aux =n;
+		for(var i = 2;i<=n;i++){	
+			while (aux%i==0){
+				aux = aux/i;
+				texto +=i+"*";
+			}		
 		}
-			else if(cont==1){
-				texto ="El numero "+n+" no es primo";
-			}
-			else {
-		texto ="El numero "+n+" es primo";
-			}
-			}
 		document.getElementById("txtComp").innerHTML = texto;
 		}
 		
