Ej humanos sin acabar

--- a/t4/clases/clases7.html
+++ b/t4/clases/clases7.html
@@ -57,6 +57,7 @@ function mostrarDatos(contenedor, ...tabla){
 /////////////////////////////////////////////////////////////
 
 var mycar = new Car("Ford");
+// mycar.carname="Mercedes";
 document.getElementById("demo").innerHTML = mycar.carname;
 document.getElementById("demo").innerHTML += "<br>" + Car.hello(mycar);
 mycar.mostrarUnDato();
