ej Persona sin acabar

--- a/t4/clases/ejPersona.html
+++ b/t4/clases/ejPersona.html
@@ -18,6 +18,9 @@
     <input type="button" id ="a" onclick="anterior()" value="<"/>
     <input type="button" id ="s" onclick="siguiente()" value=">"/>
     <input type="button" id ="f" onclick="final()" value=">>|"/><br/><br/>
+    <input type="button" id="aP" onclick="alta()" value="Alta"/>
+    <input type="button" id="mP" onclick="modificar()" value="Modificar"/>
+    <input type="button" id="bP" onclick="baja()" value="Baja"/><br/><br/>
     <input type="button" onclick="mostrarTablaP()" value="Mostrar Todas las Personas"/>
     <input type="button" onclick="mostrarP()" value="Mostrar datos"/>
     <div id="datosP"></div>
@@ -202,6 +205,9 @@
             Persona.mostrarPersonas(arrPersonas);
         }
         
+        function alta(){
+            
+        }
 
     </script>
 </body>
