--- a/t5/expresionesRegulares/ej2.html
+++ b/t5/expresionesRegulares/ej2.html
@@ -14,7 +14,7 @@
        var exTel = /^[9876][0-9]-[0-9]{3}-[0-9]{2}-[0-9]{2}$/;
 
        var nombre = document.getElementById("nombre").value;
-       var exNom = /^[A-ZÑÇÁÉÍÓÚ]{1}[a-zñçáéíóú]{2}[a-zñçáéíóú-\s]{0,22}$/;
+       var exNom = /^[A-ZÑÇÁÉÍÓÚ][a-zñçáéíóú-]{2}[a-zñçáéíóú-\s]{0,22}$/;
 
        var hora = document.getElementById("hora").value;
        var exHora = /^([01]\d|2[0-3]):([0-5]\d):([0-5][0-9])$/;
@@ -22,14 +22,33 @@
        var okHora = false;
        var okNom = false;
        var okTel = false;
+
+       var validacion = "";
+       if(exTel.test(telefono)){
+        okTel = true;
+       }
+       else{
+        validacion+= "Telefono mal<br/>";
+       }
+
+       if(exNom.test(nombre)){
+        okNom = true;
+       }
+       else{
+        validacion+="Nombre mal<br/>";
+       }
+
        if(exHora.test(hora)){
         okHora = true;
        }
-       if(okHora){
-        document.getElementById("miDiv").innerHTML = "Hora bien";
+       else{
+        validacion+="Hora mal<br/>";
+       }
+       if(okTel && okNom && okHora){
+        document.getElementById("miDiv").innerHTML = "Todo bien";
     }
         else{
-            document.getElementById("miDiv").innerHTML = "Hora mal";
+            document.getElementById("miDiv").innerHTML = validacion;
         }
     }
     
