--- a/t5/formularios/formulario00.html
+++ b/t5/formularios/formulario00.html
@@ -33,9 +33,9 @@ function cambiaColor(color){
    var elementos = miFormulario2.elements;
 
    for(var e of elementos){
-      if(e.type=="text"){
+      //if(e.type=="text"){
          e.style.color=color;
-      }
+      //}
    }
 
 }
