--- a/typeScript/index.html
+++ b/typeScript/index.html
@@ -4,6 +4,6 @@
     <title>Mi primer typeScript</title>
 </head>
 <body>
-    <script src="area.js"></script>
+    <script src="js/tipos.js"></script>
 </body>
 </html>
