--- a/js/t5/formularios/ejRadioCheckbox.html
+++ b/js/t5/formularios/ejRadioCheckbox.html
@@ -24,7 +24,7 @@ Seleccione sus temas de interés
 </form>
 <script>
     function habilita(){
-        var temas = encuesta["temas[]"];
+        var temas = encuesta["temas[]"];zzzzz
          if(encuesta.suscripcion.value == "si") {
             for(i in temas){
                 temas[i].disabled = false;
